Végleges dizájn elkészítve

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -9,6 +9,15 @@ body {
     height: 100vh;
 }
 
+video {
+    object-fit: cover;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
 @keyframes fadeIn {
     from {opacity: 0;}
     to {opacity: 1;}
