--- a/src/components/form.css
+++ b/src/components/form.css
@@ -14,7 +14,7 @@
 }
 
 .center {
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.9);
     justify-content: center;
     align-items: center;
 }
